# learningRust

adv_lifetimes/: Cargo.toml
adv_lifetimes/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
guessing_game/: Cargo.toml
irc_chat/: designing_apis_with_ownership_at_its_core.txt  mta_code_review_tokio.txt  trait_object.txt
logging/: Cargo.toml  log4rs.yaml
logging/src/: main.rs
modules/: Cargo.toml
modules/src/: lib.rs  main.rs
multi_threading/: Cargo.toml
multi_threading/src/: channels_ex.rs  cpu_pool_ex.rs  main.rs  rayon_ex.rs  server2_ex.rs  server_ex.rs
ownership/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
